<resources>
    <string name="app_name">HelpMeYelp</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register"><u>Register</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="login">Login</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="reenter_password">Re-Enter Password</string>
</resources>
