<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:background="@color/colorWhite"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorRed" >

        <!--Ratings Bar!!!!!!-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:orientation="vertical"
            android:layout_weight="3" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:src="@drawable/tablecloth"
                android:layout_marginBottom="30dp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textColorHint="@android:color/background_light"
                android:textColor="@color/colorWhite"
                android:textCursorDrawable="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"

                android:layout_alignParentTop="true"

                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/username"

                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:inputType="textEmailAddress" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_inputtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textColorHint="@android:color/background_light"
                android:backgroundTint="@color/colorWhite"
                app:passwordToggleTint="@color/colorWhite"
                android:layout_below="@+id/etUsername"
                app:passwordToggleEnabled="true" >

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/colorWhite"

                    android:textColor="@color/colorWhite"

                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:id="@+id/etPassword"
                    android:layout_alignBottom="@+id/etUsername"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/tvRegister"
                android:textColor="@color/colorWhite"
                android:layout_below="@+id/password_inputtext"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvRegister"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorWhite"
                android:id="@+id/tvForgotPassword" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1" >

            <Button
                android:id="@+id/bLogin"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <ImageView
                android:src="@drawable/icon_food"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
